--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ stages:
 
 jobs:
   include:
-    - stage: compile
+    - stage: deploy
       script: docker build -t webgrabplus .
       after_success: bash .travis/deploy.sh
