--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
 
 install:
   - sudo apt-get update
-  - sudo apt-get install -y bash
+  - sudo apt-get install -y bash ffmpeg
   - pip install streamlink
 
 env:
@@ -35,6 +35,8 @@ stages:
     if: type = cron
   - name: deploy
     if: type = cron
+  - name: validate
+    if: type = cron
 
 jobs:
   include:
@@ -48,3 +50,5 @@ jobs:
       script: docker run -v $HOME/.xml/:/xml -v $PWD/WebGrab/cfgs:/data:ro --rm vk496/webgrabplus 2
     - stage: deploy
       script: bash -x .travis/deploy.sh
+    - stage: validate
+      script: bash .testStream/validate.sh
